# ipdis

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
api/: Cargo.toml
api/examples/: io_remote.rs
api/postgres/: Cargo.toml
api/postgres/migrations/2022-05-13-022725_typedef_ipis/: down.sql  up.sql
api/postgres/migrations/2022-05-13-022727_create_dyn_path/: down.sql  up.sql
api/postgres/migrations/2022-05-13-082049_create_idf/: down.sql  up.sql
api/postgres/migrations/2022-05-13-082049_create_words/: down.sql  up.sql
api/postgres/migrations/2022-05-14-191246_create_guarantees/: down.sql  up.sql
api/postgres/src/: client.rs  lib.rs  schema.rs
api/postgres/src/models/: accounts_guarantees.rs  dyn_path.rs  dyn_paths.rs  idf.rs  mod.rs  words.rs
api/postgres/tests/: dyn_path.rs  idf.rs
api/src/: lib.rs  server.rs
api/tests/: dyn_path.rs  idf.rs  word.rs
common/: Cargo.toml
common/src/: lib.rs
modules/cli/: Cargo.toml
modules/cli/src/: args.rs  main.rs
pallet/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: main.rs
