[package]
name = "ipdis-common"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Dictionary Server"
documentation = "https://docs.rs/ipdis"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipdis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis", features = [
    "derive",
] }
ipiis-api = { git = "https://github.com/ulagbulag-village/ipiis" }

bytecheck = "0.6"
rkyv = { version = "0.7", features = ["archive_be"] }
